package duke.components;

//@@author rohan-av

public enum Pitch {
    LOWER_C,
    LOWER_D,
    LOWER_E,
    LOWER_F,
    LOWER_G,
    LOWER_A,
    LOWER_B,
    MIDDLE_C,
    UPPER_D,
    UPPER_E,
    UPPER_F,
    UPPER_G,
    UPPER_A,
    UPPER_B,
    UPPER_C,
    REST
}
